unpackaged/main/default/objects/project_cloud__Project_Task__c/project_cloud__Project_Task__c.object-meta.xml
<CustomObject>
    <description>Tasks that form the individual work effort components of the project. Each task can be assigned, managed and collaborated on with you team.</description>
    <label>Project Task</label>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>