unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Assigned_Users__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Users__c</fullName>
    <label>Assigned Users</label>
    <type>TextArea</type>
</CustomField>