unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Baseline_Hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Hours__c</fullName>
    <label>Baseline Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>