unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Bug_Link__c.field-meta.xml
<CustomField>
    <fullName>Bug_Link__c</fullName>
    <label>Bug Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>