unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/ccpe_ocp__External_Deliverables_Complete__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__External_Deliverables_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Deliverables Complete</description>
    <inlineHelpText>External Deliverables Complete</inlineHelpText>
    <label>External Deliverables Complete</label>
    <type>Checkbox</type>
</CustomField>