unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/ccpe_r__Budgeted_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Budgeted_Labor_Cost__c</fullName>
    <formula>project_cloud__Work_Type__r.ccpe_r__Default_Skill_Cost__c * project_cloud__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>