unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>DateTime</type>
</CustomField>