unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value__c</fullName>
    <label>Earned Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>