unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/EV_Hours__c.field-meta.xml
<CustomField>
    <fullName>EV_Hours__c</fullName>
    <label>EV Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>