unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Inspected_IE__c.field-meta.xml
<CustomField>
    <fullName>Inspected_IE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected IE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>