unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Inspection_checklist_result__c.field-meta.xml
<CustomField>
    <fullName>Inspection_checklist_result__c</fullName>
    <label>Inspection checklist/result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>