unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Inspection_comment__c.field-meta.xml
<CustomField>
    <fullName>Inspection_comment__c</fullName>
    <label>Inspection comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>