unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Inspection_requires_remediation__c.field-meta.xml
<CustomField>
    <fullName>Inspection_requires_remediation__c</fullName>
    <label>Inspection requires remediation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>