unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Inspection_type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_type__c</fullName>
    <label>Inspection type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Random Audit</fullName>
            </value>
            <value>
                <fullName>Audit requested by stakeholder</fullName>
            </value>
            <value>
                <fullName>Work done by Inspected IE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>