unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/LOE_subtask__c.field-meta.xml
<CustomField>
    <fullName>LOE_subtask__c</fullName>
    <label>LOE subtask</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation Overview</fullName>
            </value>
            <value>
                <fullName>Asset Build</fullName>
            </value>
            <value>
                <fullName>Operational Handoff</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Event Mapping</fullName>
            </value>
            <value>
                <fullName>Historical Backfill</fullName>
            </value>
            <value>
                <fullName>Data Connection</fullName>
            </value>
            <value>
                <fullName>Survey Package Upload</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M Support</fullName>
            </value>
            <value>
                <fullName>Plant Misc. Work</fullName>
            </value>
            <value>
                <fullName>Pro Validation</fullName>
            </value>
            <value>
                <fullName>Customer Validation support</fullName>
            </value>
            <value>
                <fullName>PI vision Display</fullName>
            </value>
            <value>
                <fullName>Quality Check</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>