unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/LOE_task__c.field-meta.xml
<CustomField>
    <fullName>LOE_task__c</fullName>
    <label>LOE task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>FSM</fullName>
            </value>
            <value>
                <fullName>Data Connection</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>