unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/People_Causes__c.field-meta.xml
<CustomField>
    <fullName>People_Causes__c</fullName>
    <label>People Causes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification Miss</fullName>
            </value>
            <value>
                <fullName>Expectation Miss</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not caused by people</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>