unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Plant_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Id__c</fullName>
    <label>Plant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>