unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Platform_Causes__c.field-meta.xml
<CustomField>
    <fullName>Platform_Causes__c</fullName>
    <label>Platform Causes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform update required</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Job Error (defsync, reproc, other)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not caused by platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>