unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Policies_Causes__c.field-meta.xml
<CustomField>
    <fullName>Policies_Causes__c</fullName>
    <label>Policies Causes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOP, Implementation Details, QA Plan</fullName>
            </value>
            <value>
                <fullName>Success Plan, Traveler</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not caused by policies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>