unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/Procedures_Causes__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Causes__c</fullName>
    <label>Procedures Causes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SWI</fullName>
            </value>
            <value>
                <fullName>Tool (automation)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not caused by procedures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>