unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Allocated__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocated__c</fullName>
    <description>This field does the same as the IsAllocated field. It has been deprecated because it was created before Checkbox formula&#39;s were available.</description>
    <formula>IF(project_cloud__IsAllocated__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Allocated (deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>