unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Allocated_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocated_End__c</fullName>
    <description>This is the end date of the last allocation for all users allocated to a task</description>
    <inlineHelpText>The end date of the last allocation of users to the Project Task</inlineHelpText>
    <label>Allocated End</label>
    <summarizedField>project_cloud__Total_Allocation__c.project_cloud__End__c</summarizedField>
    <summaryForeignKey>project_cloud__Total_Allocation__c.project_cloud__Project_Task__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>