unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocated_Hours__c</fullName>
    <description>The total number of hours allocated to this Project Task</description>
    <inlineHelpText>The total number of hours allocated to this Project Task</inlineHelpText>
    <label>Allocated Hours</label>
    <summarizedField>project_cloud__Total_Allocation__c.project_cloud__Hours__c</summarizedField>
    <summaryForeignKey>project_cloud__Total_Allocation__c.project_cloud__Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>