unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Autonomous_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Autonomous_Start__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>User entered value indicating the desired start date when there are no dependencies.</description>
    <inlineHelpText>The start date desired for the Project Task. (NOTE If the task is dependent upon other tasks, the actual start date will be immediately after the preceding task completes, and not the cannot start before date).</inlineHelpText>
    <label>Cannot Start Before</label>
    <required>true</required>
    <type>Date</type>
</CustomField>