unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Board_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Board Process utilized by this Task&#39;s Board</inlineHelpText>
    <label>Board Process</label>
    <referenceTo>project_cloud__Board_Process__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>