unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Color__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Color__c</fullName>
    <description>The color of the task</description>
    <inlineHelpText>The color of the task</inlineHelpText>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>project_cloud__Color</valueSetName>
    </valueSet>
</CustomField>