unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Completed_Contribution__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Contribution__c</fullName>
    <formula>(project_cloud__Completed_Percent__c / 100.0) * IF(ISPICKVAL(project_cloud__Units__c, &#39;Duration&#39;), project_cloud__Duration__c, project_cloud__Estimated_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the weight of the task&#39;s contribution to Phase/Sub-Phase %.</inlineHelpText>
    <label>Completed Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>