unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Completed_Contribution_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Contribution_Project_Phase__c</fullName>
    <formula>project_cloud__Contribution_Project_Phase__c * project_cloud__Completed_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the weight of the task&#39;s contribution to Phase Completion %.</inlineHelpText>
    <label>Contribution To Phase Completion (%)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>