unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Date__c</fullName>
    <description>This date is populated by the trigger when the completion % is set to 100</description>
    <inlineHelpText>The date the Project Task is marked as 100% complete. The status of the Project Task will not be &#39;Completed&#39; until the project manager checks the completed checkbox</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>