unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Hours__c</fullName>
    <description>Sum of the hours completed on the task using the time entry objects</description>
    <inlineHelpText>Summation of the number of hours that have been entered against the Project Task by users via the Time Entry process</inlineHelpText>
    <label>Deprecated (Time_Entry__c Entered Hours)</label>
    <summarizedField>project_cloud__Time_Entry__c.project_cloud__Hours__c</summarizedField>
    <summaryForeignKey>project_cloud__Time_Entry__c.project_cloud__Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>