unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Completed_Percent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value that represents how much of a Project Task has been completed. Used in a few places including the Projected Hours calculation</description>
    <inlineHelpText>The completion percentage of a Project Task as estimated by a project team member or a project manager. (NOTE For a Project Task to move to Completed status the project manager  needs to mark the task as complete via the completed checkbox)</inlineHelpText>
    <label>Completion (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>