unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Completed_Percent_IsRollup__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Percent_IsRollup__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the task&#39;s completion percentage will update automatically from the child records. (Sub Tasks/Kanban Cards)</inlineHelpText>
    <label>Completion Percent Roll-Up?</label>
    <type>Checkbox</type>
</CustomField>