unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Contribution_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Contribution_Project_Phase__c</fullName>
    <formula>IF(ISPICKVAL(project_cloud__Units__c, &#39;Duration&#39;),
	project_cloud__Duration__c / project_cloud__Project_Phase__r.project_cloud__Duration__c,
/*ELSE*/
	project_cloud__Estimated_Hours__c / project_cloud__Project_Phase__r.project_cloud__Estimated_Hours__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the weight of the task&#39;s contribution to Phase %.</inlineHelpText>
    <label>Contribution To Phase (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>