unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Directs__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Directs__c</fullName>
    <description>A count of the number of direct parent relationships the task has</description>
    <inlineHelpText>Represents the number of parent predecessors that the Project Task has</inlineHelpText>
    <label>Predecessors</label>
    <summaryForeignKey>project_cloud__Project_Task_Dependency__c.project_cloud__Child__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>