unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Display_Name__c</fullName>
    <description>Append the Task Number to the name field so users with multiple tasks with the same name can differentiate between them</description>
    <formula>Name &amp; &quot;: &quot; &amp; project_cloud__Task_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Project Task name including the Project Task Number.</inlineHelpText>
    <label>Task Name + Number</label>
    <type>Text</type>
</CustomField>