unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Duration__c</fullName>
    <inlineHelpText>The number of days required to complete a task.</inlineHelpText>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>