unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Duration_IsWorking__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Duration_IsWorking__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, ensures that duration will be calculated using only working days, excluding weekends</inlineHelpText>
    <label>Duration In Working Days?</label>
    <type>Checkbox</type>
</CustomField>