unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <description>Calculate the end date of the Task using the estimations and resources.</description>
    <formula>BLANKVALUE(project_cloud__Completed_Date__c, project_cloud__Start__c + project_cloud__Length__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated end date of the Project Task based on the number of resources allocated to the task and the estimated hours of the task</inlineHelpText>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>