unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Estimated_Hours__c</fullName>
    <description>Specify the number of hours estimated to complete the Project Task</description>
    <inlineHelpText>The number of required estimated hours to complete a task. It is recommended that only whole numbers are used to enter estimated hours.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>