unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Health_Image__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Health_Image__c</fullName>
    <formula>IMAGE(
	CASE(project_cloud__Health__c,
		&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
		&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;,
		&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
		&quot;/s.gif&quot;),
&quot;Health Status&quot;)</formula>
    <inlineHelpText>Displays a green, yellow, or red traffic light image based on the color selected from the Health field.</inlineHelpText>
    <label>Health (Traffic Light)</label>
    <type>Text</type>
</CustomField>