unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Hide_Timecard__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hide_Timecard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, allows the task to be hidden from the timecard so users cannot enter time to to it.</inlineHelpText>
    <label>Hide on Timecard</label>
    <type>Checkbox</type>
</CustomField>