unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Hours_In_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_In_Day__c</fullName>
    <defaultValue>8</defaultValue>
    <description>This is the value used for the calculation of an Estimated Hours Project Task&#39;s end date. The value of this field is copied from the value of the Project when the task is created (by the ProjectTaskConfiguration trigger) and once set is read only. This is a system field and should never be visible.</description>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Hours In Day</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>