unpackaged/main/default/objects/project_cloud__Project_Task__c/fields/project_cloud__Hours_Offset__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Offset__c</fullName>
    <description>Determine the number of hours used by the last day of the project e.g a 12 hour task will have an offset of 4 (if the hours in the day is 8). This is a system field and should never be visible.</description>
    <formula>IF((project_cloud__IsComplete__c || project_cloud__Completed_Percent__c == 1) ||
		project_cloud__Minimum_End__c == project_cloud__End__c ||
		ISPICKVAL(project_cloud__Units__c, &quot;Duration&quot;) ||
		project_cloud__IsAllocated__c,
	/*Any of the above scenarios mean there is no hours offset*/
	0,
/*ELSE*/
	/*Using the Estimated Hours calculate the hours offset*/
	MOD(project_cloud__Estimated_Hours__c + project_cloud__Parents_Hours_Offset__c, project_cloud__Hours_In_Day__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Hours Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>